--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "redux-mock-store": "^1.5.3"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup/setupEnzyme.js",
+    "setupTestFrameworkScriptFile": "./__tests__/setup/setupEnzyme.js",
     "testPathIgnorePatterns": [
-      "<rootDir>/__tests__/setup/"
+      "./__tests__/setup/"
     ]
   }
 }
