--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.3",
     "axios": "^0.18.0",
     "babel": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.10",
+    "node-fetch": "^2.2.0",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
@@ -39,6 +41,7 @@
     "enzyme-adapter-react-16": "^1.4.0",
     "enzyme-to-json": "^3.3.4",
     "jest": "^23.5.0",
+    "jest-fetch-mock": "^1.6.5",
     "redux-mock-store": "^1.5.3"
   },
   "jest": {
