--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.5.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
@@ -42,6 +43,7 @@
     "enzyme-to-json": "^3.3.4",
     "jest": "^23.5.0",
     "jest-fetch-mock": "^1.6.5",
+    "jest-mock-axios": "^2.1.11",
     "redux-mock-store": "^1.5.3"
   },
   "jest": {
